[package]
name = "gdb-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "1.2.1"
lazy_static = "1.4.0"
memfile = "0.2.1"
num = "0.4.0"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.91"
